Updated .txt file for live links to gh-pages.

--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-	
+		<h1>Coming Soon. Started a new blank index to completely refactor home pages using jQM.</h1>
 
 	<!-- JavaScript under here -->
 
