--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -1,4 +1,11 @@
-<!doctype html>  
+<!doctype html> 
+<!-- Zachery Hernandez -->
+<!-- VFW 1205 -->
+<!-- Project 2 -->
+<!-- 5/10/2012 -->
+<!-- Body Health & Fitness -->
+<!-- https://github.com/AlucardFair/MiU-Project-2 -->
+<!-- Start of HTML Doc --> 
 <html lang="en">
 <head>
 
