Updated index.html to show 'Fitness News' stream. Off main page, linked button to a news stream.

--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -48,6 +48,11 @@
 					<img class="imgSize" src="images/BHF_Feature.png"/>
 				</a>
 			</div>
+
+			<!-- News Stream -->
+			<div>
+				<a href="#news"data-role="button" class="secondaryColor" >Fitness News</a>
+			</div>
 			
 			<!-- Browse -->
 			<div data-role="collapsible-set">
@@ -282,6 +287,118 @@
 					<li><a href="#home" data-icon="home" data-iconpos="left" class="mainColor">Home</a></li>
 					<li><a href="#about" data-icon="info" data-iconpos="left" class="mainColor">About</a></li>
 					<li><a href="#otherApp"data-icon="check" data-iconpos="left" class="secondaryColor">Other App</a></li>
+				</ul>
+			</div>
+		</div>
+		
+	</div>
+
+	<!-- Start of Agility Page -->
+	<div data-role="page" id="news" data-add-back-btn="true">
+	
+		<!-- Header -->
+		<div data-role="header" data-position="fixed" class="mainColor">
+			<h1>Fitness News</h1>
+		</div>
+		
+		<!--  News Page Content -->
+		<div data-role="content">
+
+			<ul data-role="listview" data-filter="true">
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Agility.png"/>
+						<h4>How can you get faster?</h4>
+						<span><small>by John Smith</small></span>
+						<p>5/10/2012 5:15pm<br />Tags: Agility, Speed, Finess</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Strength.png"/>
+						<h4>How can you get stronger?</h4>
+						<span><small>by Johnny Noeface</span></small>
+						<p>5/10/2012 3:46pm<br />Tags: Strength</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Tone.png"/>
+						<h4>Looking to get those abs defined?</h4>
+						<span><small>by Jane Smith</small></span>
+						<p>5/10/2012 2:34pm<br />Tags: Tone, Abs</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Flexibility.png"/>
+						<h4>Yoga: Why you need it.</h4>
+						<span><small>by Jane Smith</small></span>
+						<p>5/10/2012 11:15am<br />Tags: Flexibility, Yoga</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Cardio.png"/>
+						<h4>How you can improve your heart rate.</h4>
+						<span><small>by John Smith</small></span>
+						<p>5/10/2012 5:05am<br />Tags: Cardio, Heart Rate</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Tone.png"/>
+						<h4>Push-ups: 'Why' they can make a difference.</h4>
+						<span><small>by Johnny Noeface</small></span>
+						<p>5/9/2012 8:51pm<br />Tags: Tone, Push-ups</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Strength.png"/>
+						<h4>Weight Lifting: Free or Machines?</h4>
+						<span><small>by Jane Smith</small></span>
+						<p>5/9/2012 6:32pm<br />Tags: Strength, Weight Lifting</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Flexibility.png"/>
+						<h4>Are you limber?</h4>
+						<span><small>by Jane Smith</small></span>
+						<p>5/9/2012 2:16pm<br />Tags: Flexibility, Limber</p>
+					</a>
+				</li>
+
+				<li>
+					<a href="#underConstruction">
+						<img src="images/Agility.png"/>
+						<h4>Fast enough?</h4>
+						<span><small>by John Smith</samll></span>
+						<p>5/9/2012 2:06pm<br />Tags: Agility</p>
+					</a>
+				</li>
+
+			</ul>
+
+		</div>
+		
+		<!-- Footer -->
+		<div data-role="footer" data-position="fixed">
+			<!-- Navbar -->
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#home" data-icon="home" data-iconpos="left" class="mainColor">Home</a></li>
+					<li><a href="#about" data-icon="info" data-iconpos="left" class="mainColor">About</a></li>
+					<li><a href="#otherApp"data-icon="check" data-iconpos="left" class="mainColor">Other App</a></li>
 				</ul>
 			</div>
 		</div>
