Removed some extra 'news' stream items. Causing an error and no longer working.

--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -293,7 +293,7 @@
 		
 	</div>
 
-	<!-- Start of Agility Page -->
+	<!-- Start of News Page -->
 	<div data-role="page" id="news" data-add-back-btn="true">
 	
 		<!-- Header -->
@@ -378,15 +378,6 @@
 					</a>
 				</li>
 
-				<li>
-					<a href="#underConstruction">
-						<img src="images/Agility.png"/>
-						<h4>Fast enough?</h4>
-						<span><small>by John Smith</samll></span>
-						<p>5/9/2012 2:06pm<br />Tags: Agility</p>
-					</a>
-				</li>
-
 			</ul>
 
 		</div>
@@ -405,7 +396,7 @@
 		
 	</div>
 	
-	<!-- Start Add Item Page-->
+	<!-- Start Add Item Page -->
 	<div data-role="page" id="additem">
 
 		<!-- Header -->
