Changed Button text for app change. Said Gold instead of Bronze.

--- a/Gold/index.html
+++ b/Gold/index.html
@@ -275,7 +275,7 @@
 				</li>
 			</ul>
 
-			<a href="http://alucardfair.github.com/MiU-Project-2/Bronze/index.html" data-role="button">Checkout Gold App</a>
+			<a href="http://alucardfair.github.com/MiU-Project-2/Bronze/index.html" data-role="button">Checkout Bronze App</a>
 
 		</div>
 		
