Updated h4 tag in other app page. Still said Rbonze instead of Gold.

--- a/Gold/index.html
+++ b/Gold/index.html
@@ -270,7 +270,7 @@
 			<ul data-role="listview">
 				<li>
 					<img src="images/Gold_Star.png"/>
-					<h4>Bronze App</h4>
+					<h4>Gold App</h4>
 					<p>Currently, you are on the Gold App.<br />To see the Bronze App, click the<br />button below.</p>
 				</li>
 			</ul>
