Final update and push for the Bronze App.

--- a/Bronze/additem.html
+++ b/Bronze/additem.html
@@ -18,7 +18,7 @@
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<meta name="viewport" content="user-scalable=no, target-densitydpi=device-dpi" />
 		<!-- CSS -->
-		<link rel="stylesheet" href="CSS/styles.css" type="text/css" />
+		<link rel="stylesheet" href="css/styles.css" type="text/css" />
 	</head>
 	<body>
 		<header>
@@ -92,8 +92,8 @@
 		<small>Coded by Zachery Hernandez</small>
 	</footer>
 		<!-- JavaScript -->
-		<script type="text/javascript" src="JS/json.js"></script>
-		<script type="text/javascript" src="JS/main.js"></script>
+		<script type="text/javascript" src="js/json.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
 <!-- End of HTML Doc -->
