--- a/Gold/index.html
+++ b/Gold/index.html
@@ -214,7 +214,7 @@
 		<div data-role="content">
 
 			<div>
-				<img src="images/.png" class="imgSize" />
+				<img src="images/BHF_About.png" class="imgSize" />
 			</div>
 
 			<div data-role="collapsible" data-collapsed="true">
@@ -222,8 +222,8 @@
 					<ul data-role="listview">
 					
 						<li>
-							<a href="#underConstruction">
-								<img src="images/.png"/>
+							<a href="#aboutApp">
+								<img src="images/About_Icon.png"/>
 								<h4>About the App</h4>
 								<p>This will tell you about the app</p>
 							</a>
@@ -239,6 +239,63 @@
 					
 					</ul>
 				</div>
+
+		</div>
+
+		<!-- Footer -->
+		<div data-role="footer" data-position="fixed">
+			<!-- Navbar -->
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#home" data-icon="home" data-iconpos="left" class="mainColor">Home</a></li>
+					<li><a href="#about" data-icon="info" data-iconpos="left" class="secondaryColor">About</a></li>
+					<li><a href="#otherApp"data-icon="check" data-iconpos="left" class="mainColor">Other App</a></li>
+				</ul>
+			</div>
+		</div>
+		
+	</div>
+
+	<!-- Start of About App Page -->
+	<div data-role="page" id="aboutApp" data-add-back-btn="true">
+	
+		<!-- Header -->
+		<div data-role="header" data-position="fixed" class="mainColor">
+			<h1>About the App</h1>
+		</div>
+		
+		<!--  About Content -->
+		<div data-role="content">
+
+			<div>
+				<img src="images/BHF_About.png" class="imgSize" />
+			</div>
+
+			<div>
+				<h4>About this app</h4>
+				<p class="indent">With this app, we help you towards your goals. Whether it's to get in shape, lose weight or maintain weight; We want you to help you get fit. By organizing your workouts, you will be able to stay up-to-date with your own goals and motivation.</p>
+				<p class="indent">We also feature news brought to you by the wonderful staff who keep us up-to-date with all the fitness news you could ever ask for. Below is a list of pros and cons for this app and weahter its right for you:</p>
+			</div>
+
+			<div class="ui-grid-a">
+				<div class="ui-block-a">
+					<ul data-role="listview" data-inset="true">
+						<li data-role="list-divider">Pros</li>
+						<li>Storage on device is kept open.</li>
+						<li>No need to actually install this app.</li>
+						<li>All in one to-do workout list.</li>
+					</ul>
+				</div>
+				<div class="ui-block-b">
+					<ul data-role="listview" data-inset="true">
+						<li data-role="list-divider">Cons</li>
+						<li>It's not locally installed.</li>
+						<li>No internet, no working about.</li>
+						<li>Saves are on browser, not on server or laocally.</li>
+						<li>Can only access saved workouts from particular device.</li>
+					</ul>
+				</div>
+			</div>
 
 		</div>
 
